--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
+
 BODY {
   direction: rtl;
+  font-family: 'Open Sans', sans-serif;
+
 }
 
 .App {
