--- a/src/Login.css
+++ b/src/Login.css
@@ -6,7 +6,7 @@
     justify-content: center;
   }
   
-  .login__container {
+  .login_container {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -15,7 +15,7 @@
     border: 2px solid #000;
     padding: 30px;
   }
-  .login__textBox {
+  .login_textBox {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
