--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,29 @@ input, select, textarea {
   display: block;
   transition: all 0.3s;
 }
+
+.back {
+    text-decoration: none;
+    float: left;
+    position: relative;
+    padding: 10px;
+    font-size: 20px;
+    width: 30px;
+    text-align: center;
+    border-radius: 50%;
+    background-color: #b92525;
+    color: rgb(255, 255, 255);
+}
+
+.forward {
+  text-decoration: none;
+  float: right;
+  position: relative;
+  padding: 10px;
+  font-size: 20px;
+  width: 30px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #b92525;
+  color: rgb(255, 255, 255);
+}
