--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,6 @@ BODY {
   background-color: rgb(223, 255, 249);
 }
 
-.App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .btn-signout {
   padding: 1.3em 3em;
   font-size: 12px;
@@ -64,14 +49,14 @@ BODY {
   outline: none;
  }
  
- .btn-add:hover {
+.btn-add:hover {
   background-color: #2EE59D;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
   transform: translateY(-7px);
  }
  
- .btn-add:active {
+.btn-add:active {
   transform: translateY(-1px);
  }
 
@@ -89,22 +74,8 @@ input, select, textarea {
   transition: all 0.3s;
 }
 
-.back {
-    text-decoration: none;
-    float: left;
-    position: relative;
-    padding: 10px;
-    font-size: 20px;
-    width: 30px;
-    text-align: center;
-    border-radius: 50%;
-    background-color: #b92525;
-    color: rgb(255, 255, 255);
-}
-
-.forward {
+.nav a {
   text-decoration: none;
-  float: right;
   position: relative;
   padding: 10px;
   font-size: 20px;
@@ -113,4 +84,12 @@ input, select, textarea {
   border-radius: 50%;
   background-color: #b92525;
   color: rgb(255, 255, 255);
+}
+
+.back {
+  float: left;
+}
+
+.forward {
+  float: right;
 }
