--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,18 @@ BODY {
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
- }
- 
+}
+
 .btn-signout:hover {
   background-color: #e52e2e;
   box-shadow: 0px 15px 20px rgba(229, 46, 46, 0.4);
   color: #fff;
   transform: translateY(-7px);
- }
- 
+}
+
 .btn-signout:active {
   transform: translateY(-1px);
- }
+}
 
 .btn-add {
   padding: 1.3em 3em;
@@ -48,25 +48,27 @@ BODY {
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
- }
- 
+}
+
 .btn-add:hover {
   background-color: #2EE59D;
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: #fff;
   transform: translateY(-7px);
- }
- 
+}
+
 .btn-add:active {
   transform: translateY(-1px);
- }
+}
 
- 
-input, select, textarea {
+
+input,
+select,
+textarea {
   font-family: 'Roboto', sans-serif;
   color: #333;
   font-size: 0.8rem;
-	margin: 0 auto;
+  margin: 0 auto;
   padding: 1rem 1.2rem;
   border-radius: 0.2rem;
   background-color: rgb(255, 255, 255);
@@ -95,7 +97,8 @@ input, select, textarea {
   float: right;
 }
 
-.container2, .container2 a {
+.container2,
+.container2 a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -107,7 +110,7 @@ input, select, textarea {
 .flex {
   padding: 15px 25px 15px 25px;
   border-radius: 10px;
-  width: calc(80% * (1/4));
+  width: calc(40% * (1/3));
   margin: 10px 10px 0 10px;
   text-align: center;
   background: #B7E7DE;
@@ -116,6 +119,19 @@ input, select, textarea {
 .flex:hover {
   background: #abd8cf;
   color: white;
+}
+
+.logout {
+  background: #e52e2e;
+  width: fit-content;
+}
+
+.logout a {
+  color: white;
+}
+
+.logout:hover {
+  background: #ff3333;
 }
 
 .form_profile {
