--- a/src/Login.css
+++ b/src/Login.css
@@ -7,13 +7,14 @@
   }
   
 .container {
+  width: fit-content;
   display: flex;
   flex-direction: column;
   text-align: center;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 10px 34px -15px rgba(0, 0, 0, 0.356);
-  padding: 30px;
+  padding: 20px;
 }
 
 .textBox {
