--- a/src/New.css
+++ b/src/New.css
@@ -18,7 +18,7 @@
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -31,7 +31,9 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover { background-color: #f1f1f1 }
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -41,16 +43,16 @@
 
 /* Hamburger Menu */
 .col {
-	display: block;
-	float:left;
-	margin: 1% 0 1% 1.6%;
+  display: block;
+  float: left;
+  margin: 1% 0 1% 1.6%;
 }
 
 .col:first-of-type {
   margin-left: 0;
 }
 
-.hamburger .line{
+.hamburger .line {
   width: 50px;
   height: 5px;
   background-color: #ecf0f1;
@@ -61,36 +63,36 @@
   transition: all 0.3s ease-in-out;
 }
 
-.hamburger:hover{
+.hamburger:hover {
   cursor: pointer;
 }
 
-#menu.is-active{
+#menu.is-active {
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   -o-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 
-#menu.is-active .line:nth-child(2){
+#menu.is-active .line:nth-child(2) {
   -webkit-transition: none;
   -o-transition: none;
   transition: none;
 }
 
-#menu .line:nth-child(2){
+#menu .line:nth-child(2) {
   -webkit-transition-delay: 0.3s;
   -o-transition-delay: 0.3s;
   transition-delay: 0.3s;
 }
 
 
-#menu.is-active .line:nth-child(2){
+#menu.is-active .line:nth-child(2) {
   opacity: 0;
 }
 
 #menu.is-active .line:nth-child(1),
-#menu.is-active .line:nth-child(3){
+#menu.is-active .line:nth-child(3) {
   width: 35px;
   -webkit-transform-origin: right;
   -moz-transform-origin: right;
@@ -99,14 +101,14 @@
   transform-origin: right;
 }
 
-#menu.is-active .line:nth-child(1){
+#menu.is-active .line:nth-child(1) {
   -webkit-transform: translateY(15px) rotate(45deg);
   -ms-transform: translateY(15px) rotate(45deg);
   -o-transform: translateY(15px) rotate(45deg);
   transform: translateY(15px) rotate(45deg);
 }
 
-#menu.is-active .line:nth-child(3){
+#menu.is-active .line:nth-child(3) {
   -webkit-transform: translateY(-15px) rotate(-45deg);
   -ms-transform: translateY(-15px) rotate(-45deg);
   -o-transform: translateY(-15px) rotate(-45deg);
