--- a/src/Login.css
+++ b/src/Login.css
@@ -1,11 +1,11 @@
 .login {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
   width: fit-content;
   display: flex;
@@ -37,20 +37,25 @@
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-  }
-  
-  .btn-login:hover {
+}
+
+.btn-login:hover {
   background-color: rgb(255 249 194);
   box-shadow: 0px 15px 20px rgb(255 249 194 0.4);
   color: #000;
   font-weight: bold;
   transform: translateY(-7px);
-  }
-  
-  .btn-login:active {
+}
+
+.btn-login:active {
   transform: translateY(-1px);
-  }
+}
 
 .login div {
   margin-top: 7px;
+}
+
+.err {
+  color: red;
+  font-weight: bold;
 }
