--- a/src/components/layout/App.css
+++ b/src/components/layout/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap');
 
 BODY {
   direction: rtl;
@@ -144,4 +144,4 @@ textarea {
 
 .form_profile p {
   flex: 50%;
-}
+} */
