--- a/src/components/layout/Users.css
+++ b/src/components/layout/Users.css
@@ -8,9 +8,8 @@
 }
 
 .table-wrapper img {
-    height: 30px;
-    width: 30px;
-    padding: 5px;
+    height: 20px;
+    width: 20px;
 }
 
 .fl-table {
@@ -28,7 +27,7 @@
 .fl-table td,
 .fl-table th {
     text-align: center;
-    padding: 8px;
+    padding: 3px;
 }
 
 .fl-table td {
@@ -53,7 +52,6 @@
 }
 
 /* Responsive */
-
 @media (max-width: 767px) {
     .fl-table {
         display: block;
@@ -61,7 +59,6 @@
     }
 
     .table-wrapper:before {
-        content: "Scroll horizontally >";
         display: block;
         text-align: right;
         font-size: 11px;
@@ -131,4 +128,49 @@
         display: block;
         text-align: center;
     }
+}
+
+.btn-toggle {
+    background-image: linear-gradient(#f7f8fa, #e7e9ec);
+    border-color: #adb1b8 #a2a6ac #8d9096;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    box-shadow: rgba(255, 255, 255, .6) 0 1px 0 inset;
+    box-sizing: border-box;
+    color: #0f1111;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Amazon Ember", Arial, sans-serif;
+    font-size: 14px;
+    height: 24px;
+    font-size: 13px;
+    outline: 0;
+    overflow: hidden;
+    padding: 0 9px;
+    text-align: center;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+}
+
+.btn-toggle:active {
+    border-bottom-color: #a2a6ac;
+}
+
+.btn-toggle:active:hover {
+    border-bottom-color: #a2a6ac;
+}
+
+.btn-toggle:hover {
+    border-color: #a2a6ac #979aa1 #82858a;
+}
+
+.btn-toggle:focus {
+    border-color: #e77600;
+    box-shadow: rgba(228, 121, 17, .5) 0 0 3px 2px;
+    outline: 0;
 }
